--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -1,12 +1,29 @@
 version: '3.5'
 services:
+  mongodb:
+    container_name: happy-mongodb
+    image: adamperyman/happy-mongodb
+    ports:
+      - 27017:27017
+    environment:
+      - AUTH=yes
+      - MONGODB_ADMIN_USER=admin
+      - MONGODB_ADMIN_PASS=1234
+      - MONGODB_APPLICATION_DATABASE=app
+      - MONGODB_APPLICATION_USER=user
+      - MONGODB_APPLICATION_PASS=4321
+      # Data volume must be the same as host dir below.
+      - MONGODB_DATA_VOLUME=/data/app
+    volumes:
+      # Host dir must be the same as $MONGODB_DATA_VOLUME
+      - /data/app:/data/db
   plex:
     container_name: plex
     image: plexinc/pms-docker
     restart: unless-stopped
     environment:
       - TZ=Pacific/Auckland
-      - PLEX_CLAIM=***REMOVED***
+      - PLEX_CLAIM=claim
     network_mode: host
     volumes:
       - /home/plex/plex/database:/config
@@ -27,4 +44,3 @@ services:
       - /home/plex/plex/media/plexdrive:/chunks
       - /home/plex/plex/cms-config:/config
       - /home/plex/plex/logs:/log
-
